# nodriver

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-deploy.yml  daily-start.yml  pythonapp.yml
docs/: Infrastructure.md  aws-cloud-deployment.md
nodriver/cdp/: dom.py
nodriver/core/: connection.py
src/: main.py
src/agent/: __init__.py  config.py  event_handlers.py  login_actions.py  options.py  scraper_context.py  utils.py
tests/: main.py
