[project]
name = "ai-auditology-social-nodriver"
version = "0.1.0"
description = "Agent for passively observing content in timed action loop on using python and nodriver."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "fastparquet>=2024.11.0",
    "nodriver @ git+ssh://git@github.com/kinit-sk/ai-auditology-nodriver",
    "pandas>=2.2.3",
    "websockets==14.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
